tests/error/template_unknown.gw
// [contains] unknown type in
 template“my_type”
function void my_function() { <<<"test">>>; }

my_function“unknown_type”();
